# application-services

./: .buildconfig-android.yml  CHANGES_UNRELEASED.md  Cargo.toml  build.gradle  publish.gradle
automation/taskcluster/: build_config.py
components/addresses/: Cargo.toml  README.md
components/addresses/android/src/main/: AndroidManifest.xml
components/addresses/android/src/main/java/mozilla/appservices/logins/: DatabaseLoginsStorage.kt  LoginsStorage.kt  LoginsStorageException.kt  MemoryLoginsStorage.kt  ServerPassword.kt
components/addresses/android/src/main/java/mozilla/appservices/logins/rust/: PasswordSyncAdapter.kt  RustError.kt
components/addresses/android/src/test/java/mozilla/appservices/logins/: DatabaseLoginsStorageTest.kt  LoginsStorageTest.kt  MemoryLoginsStorageTest.kt
components/addresses/examples/: sync_addresses_sql.rs  sync_pass_sql.rs
components/addresses/ffi/: Cargo.toml
components/addresses/ffi/src/: lib.rs
components/addresses/ios/Logins/: LoginRecord.swift  LoginsStorage.swift  RustPasswordAPI.h
components/addresses/ios/Logins/Errors/: LoginStoreError.swift
components/addresses/src/: address.rs  db.rs  engine.rs  error.rs  ffi.rs  lib.rs  schema.rs  update_plan.rs
components/demo_thing/: Cargo.toml  README.md  build.rs  metrics.yaml
components/demo_thing/android/: build.gradle  metrics.yaml
components/demo_thing/android/src/main/: AndroidManifest.xml
components/demo_thing/android/src/main/java/mozilla/appservices/demothing/: DemoThing.kt
components/demo_thing/android/src/main/java/mozilla/appservices/demothing/rust/: LibDemoThingFFI.kt
components/demo_thing/ffi/: Cargo.toml
components/demo_thing/ffi/src/: lib.rs
components/demo_thing/src/: lib.rs  metrics.rs
components/forms/: Cargo.toml  README.md  build.rs
components/forms/src/: forms_msg_types.proto  lib.rs
components/fxa-client/: Cargo.toml
components/fxa-client/js/: Cargo.toml  index.js  package-lock.json
components/fxa-client/js/src/: lib.rs
components/fxa-client/src/: config.rs  device.rs  http_client.rs  lib.rs  migrator.rs  oauth.rs  profile.rs  scoped_keys.rs  send_tab.rs
components/fxa-client/src/internal/commands/: send_tab.rs
components/logins/: Cargo.toml
components/logins/examples/: sync_pass_sql.rs
components/logins/ffi/: Cargo.toml
components/logins/ffi/src/: lib.rs
components/logins/src/: db.rs  engine.rs  error.rs  ffi.rs  lib.rs  login.rs  update_plan.rs  util.rs
components/places/android/src/main/java/mozilla/appservices/places/: Bookmarks.kt  PlacesConnection.kt
components/places/ffi/src/: lib.rs
components/places/ios/Places/: Places.swift  RustPlacesAPI.h
components/places/src/storage/: bookmarks.rs
components/push/idl/: PushManager.webidl
components/push/src/: crypto.rs
components/remerge/: Cargo.toml
components/support/ffi/: Cargo.toml  README.md
components/support/ffi/src/: error.rs  ffistr.rs  handle_map.rs  into_ffi.rs  lib.rs  macros.rs  string.rs
components/support/guid/: Cargo.toml
components/support/rc_crypto/: Cargo.toml
components/support/rc_crypto_wasm/: Cargo.toml
components/support/rc_crypto_wasm/src/: aead.rs  agreement.rs  constant_time.rs  digest.rs  ece_crypto.rs  error.rs  hawk_crypto.rs  hkdf.rs  hmac.rs  lib.rs  rand.rs
components/support/rc_crypto_wasm/src/aead/: aes_cbc.rs  aes_gcm.rs
components/support/rc_glean/: Cargo.toml  README.md
components/support/rc_glean/android/src/main/: AndroidManifest.xml
components/support/rc_glean/android/src/main/java/mozilla/appservices/rcglean/: RcGlean.kt
components/support/rc_glean/android/src/main/java/mozilla/appservices/rcglean/rust/: LibRcGleanFFI.kt
components/support/rc_glean/ffi/: Cargo.toml
components/support/rc_glean/ffi/src/: lib.rs
components/support/rc_glean/glean-sys/: Cargo.toml  README.md  build.rs
components/support/rc_glean/glean-sys/src/: bindings.rs  lib.rs
components/support/rc_glean/src/: error.rs  lib.rs
components/sync15/: Cargo.toml
components/sync15/src/: client.rs  token.rs
components/sync_manager/: Cargo.toml
components/sync_manager/src/: manager.rs
components/viaduct/: README.md
components/viaduct/src/: backend.rs  lib.rs
components/viaduct/src/backend/: stub.rs
components/viaduct_wasm/: Cargo.toml
components/viaduct_wasm/src/: backend.rs  error.rs  lib.rs
components/viaduct_wasm/src/backend/: ffi.rs  reqwest.rs
examples/fxa-client/src/: devices-api.rs
megazords/full/: Cargo.toml
megazords/full/android-forUnitTests/: build.gradle
megazords/full/src/: lib.rs
testing/sync-test/src/: main.rs  sync15.rs
tools/: requirements.txt
tools/codegen/: Cargo.toml
tools/codegen/src/: main.rs
