[package]
name = "forms"
version = "0.1.0"
authors = ["Thom Chiovoloni <tchiovoloni@mozilla.com>"]
edition = "2018"
license = "MPL-2.0"

[dependencies]
sync15 = { path = "../sync15" }
serde = "1.0.99"
serde_derive = "1.0.99"
serde_json = "1.0.40"
log = "0.4"
lazy_static = "1.4.0"
failure = "0.1.5"
caseless = "0.2.1"
sql-support = { path = "../support/sql" }
ffi-support = { path = "../support/ffi" }
prost = "0.5.0"
prost-derive = "0.5.0"
bytes = "0.4.12"
interrupt = { path = "../support/interrupt" }
error-support = { path = "../support/error" }
sync-guid = { path = "../support/guid", features = ["rusqlite_support", "random"]}

[build-dependencies]
prost-build = "0.5.0"