[package]
name = "fxaclient_js"
edition = "2018"
version = "0.1.0"
authors = ["Application Services <application-services@mozilla.com>"]
license = "MPL-2.0"

[lib]
name = "fxaclient_ffi"
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.50"
js-sys = "0.3.27"
wasm-bindgen-futures = "0.3.27"
futures-preview = { version = "=0.3.0-alpha.18",  features = ["async-await", "nightly", "io-compat"] }
ffi-support = { path = "../../support/ffi" }
lazy_static = "1.3.0"
url = "1.7.1"

[dependencies.fxa-client]
path = "../"
