[package]
name = "rc_glean"
version = "0.1.0"
authors = ["application-services@mozilla.com"]
edition = "2018"
license = "MPL-2.0"

[lib]
crate-type = ["lib"]

[dependencies]
lazy_static = "1.4.0"
log = "0.4.7"
glean-core = { path = "/home/rfk/repos/mozilla/glean/glean-core" }
glean-sys = { path = "./glean-sys" }

[dev-dependencies]
